--- a/health_web/src/main/webapp/pages/ordersetting.html
+++ b/health_web/src/main/webapp/pages/ordersetting.html
@@ -143,7 +143,16 @@
                 },
 				//上传之前进行文件格式校验
                 beforeUpload(file){
-                    return true;
+                    const isXLS = file.type = 'application/vnd.ms-excel';
+                    if (isXLS){
+                        return true;
+                    }
+                    const isXLSX = file.type = 'application/vnd.openxmlformats-officedocument.spreadsheetml.sheet';
+                    if (isXLS){
+                        return true;
+                    }
+                    this.$message.error('上传文件只能是xls或者xlsx格式！');
+                    return false;
                 },
 				//下载模板文件
                 downloadTemplate(){
